adding index html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<h2>H1 Loneliness Chatbot GNG5125 Team 10/h2>
+<h2>Loneliness Chatbot GNG5125 Team 10 </h2>
 
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
